--- a/.github/workflows/vercel-deploy.yml
+++ b/.github/workflows/vercel-deploy.yml
@@ -12,6 +12,18 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
         
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
+          cache: 'npm'
+        
+      - name: Install dependencies
+        run: npm ci
+        
+      - name: Run linting
+        run: npm run lint
+        
       - name: Deploy to Vercel
         run: |
           curl -X POST "https://api.vercel.com/v1/integrations/deploy/prj_o2TDqglndVCscJzN2DOXYIVH8TWZ/SKFuiyavD0"
